[package]
name = "sectool"
version = "0.2.1"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
quick-xml = { version = "0.39.2", features = ["serialize"] }
reqwest = { version = "0.12", features = ["json", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "1.0.6"
